# doctest-driver-gen

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  doctest-driver-gen.cabal  stack.yaml
.github/workflows/: build.yml  haskell-ci.yml
app/: Main.hs
doctest/: doctest-driver.hs
src/Test/DocTest/: Gen.hs
test/: Example.hs  LICENSE  README.md  Spec.hs  ddgen-test.cabal  doctest-driver.hs
test/src/: Lib.hs
