name:                doctest-driver-gen
version:             0.1.0.0
synopsis:            Generate doctest-driver.hs
-- description:
homepage:            https://github.com/Hexirp/doctest-driver-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Hexirp
maintainer:          Hexirp@users.noreply.github.com
copyright:           2017 Hexirp
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.DocTest.Gen
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -W
  default-language:    Haskell2010

executable doctest-driver-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , doctest-driver-gen
  default-language:    Haskell2010

test-suite doctest-driver-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , doctest-driver-gen
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hexirp/doctest-driver-gen
