name:                ddgen-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Hexirp/doctest-driver-gen
license:             BSD3
license-file:        LICENSE
author:              Hexirp
maintainer:          https://github.com/Hexirp/doctest-driver-gen/issues
copyright:           2017 Hexirp
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite ddgen-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base
                     , ddgen-test
                     , doctest
                     , doctest-driver-gen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hexirp/doctest-driver-gen
  subdir:   test
